--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://nitschinger.at/"
+baseurl = "https://nitschinger.at"
 languageCode = "en-us"
 title = "daschl writes. sometimes."
 author = "Michael Nitschinger"
