--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ rssLimit = 10
 paginate = 10
 disablePathToLower = true
 disqusShortname = "daschl"
+googleAnalytics = "UA-19686689-1"
 
 [markup]
   [markup.highlight]
